Cut(eos_designs): Remove deprecated inband_management_subnet and inband_management_vlan keys (#4318)

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -83,8 +83,14 @@ The following data model keys have been removed from `eos_designs` in v5.0.0.
 | <connected_endpoints_key>[].adapters[].port_channel.short_esi | <connected_endpoints_key>[].adapters[].ethernet_segment.short_esi |
 | network_ports[].port_channel.short_esi | network_ports[].ethernet_segment.short_esi |
 | port_profiles[].port_channel.short_esi | port_profiles[].ethernet_segment.short_esi |
-| old key 3.1(defs_node_type) | new key(TODO) |
-| old key 3.2(defs_node_type) | new key(TODO) |
+| <node_type_key>.defaults.inband_management_subnet | <node_type_key>.defaults.inband_mgmt_subnet |
+| <node_type_key>.defaults.inband_management_vlan | <node_type_key>.defaults.inband_mgmt_vlan |
+| <node_type_key>.node_groups[].nodes[].inband_management_subnet | <node_type_key>.node_groups[].nodes[].inband_mgmt_subnet |
+| <node_type_key>.node_groups[].nodes[].inband_management_vlan | <node_type_key>.node_groups[].nodes[].inband_mgmt_vlan |
+| <node_type_key>.node_groups[].inband_management_subnet | <node_type_key>.node_groups[].inband_mgmt_subnet |
+| <node_type_key>.node_groups[].inband_management_vlan | <node_type_key>.node_groups[].inband_mgmt_vlan |
+| <node_type_key>.nodes[].inband_management_subnet | <node_type_key>.nodes[].inband_mgmt_subnet |
+| <node_type_key>.nodes[].inband_management_vlan | <node_type_key>.nodes[].inband_mgmt_vlan |
 | <network_services_key>[].vrfs[].svis[].ipv6_address_virtual | <network_services_key>[].vrfs[].svis[].ipv6_address_virtuals |
 | svi_profiles[].ipv6_address_virtual | svi_profiles[].ipv6_address_virtuals |
 | ptp | ptp_settings |
