Refactor(eos_designs,eos_cli_config_gen): default validation_mode to error and remove conversion_mode

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -28,6 +28,7 @@ In AVD 4.0.0 and across both `eos_designs` and `eos_cli_config_gen`, *all* "dict
 In AVD 4.x inputs were auto-converted to the new data models.
 
 As of AVD 5.0.0 the automatic conversion from dict-of-dicts has been removed, so it is required to update the input data to the new data models.
+The `avd_data_conversion_mode` key has also been removed.
 
 Errors will be raised for each data model not conforming to the list type when running AVD:
 
