--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -46,6 +46,7 @@ In AVD 4.0.0 and across both `eos_designs` and `eos_cli_config_gen`, *all* "dict
 In AVD 4.x inputs were auto-converted to the new data models.
 
 As of AVD 5.0.0 the automatic conversion from dict-of-dicts has been removed, so it is required to update the input data to the new data models.
+The `avd_data_conversion_mode` key has also been removed.
 
 See the [porting guide](../porting-guides/5.x.x.md#data-model-changes-from-dict-of-dicts-to-list-of-dicts) for details.
 
@@ -53,6 +54,12 @@ See the [porting guide](../porting-guides/5.x.x.md#data-model-changes-from-dict-
 
 In AVD 5.0.0, all `eos_designs` and `eos_cli_config_gen` keys are validated by schemas and execution will stop for any violations.
 If additional custom keys are desired, a key starting with an underscore `_`, will be ignored.
+
+!!! danger
+    The input variable `avd_data_validation_mode` now has a default value of `error`, and while it can be set to `warning`, this is highly discouraged.
+    All AVD code relies on the validation to ensure valid data, so the code assumes that the data is valid.
+
+    If the validation mode is set to `warning`, execution will continue with invalid data, which can lead to hard-to-read errors or incorrect behavior.
 
 ### Breaking or behavioral changes in eos_cli_config_gen
 
