--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -169,6 +169,14 @@ As of AVD 5.0.0 the automatic conversion from both of the previous models has be
               route_map: static-to-bgp
     ```
 
+### Updated the eos J2 template for traffic-policies
+
+The change has been incorporated into `traffic-policies.j2` eos template.
+
+In AVD 4.0.0 protocol udp under traffic policies were accepting the flags and if the source/destination port was defined for tcp/udp protocol then unable to define the source/destination field-set.
+
+As of AVD 5.0.0 protocol udp under traffic policies is not accepting the flags and now both the source/destination port and field set can be defined for tcp/udp protocol.
+
 ### Removal of deprecated data models
 
 The following data model keys have been removed from `eos_cli_config_gen` in v5.0.0.
