--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -76,7 +76,7 @@ TODO: Level 3 sections for each change with details on how to migrate
 
 ### AvdInterfaceDescriptions breaking changes
 
-Some method of the `AvdInterfaceDescriptions` class were collapsed.
+Some methods of the `AvdInterfaceDescriptions` class were collapsed.
 The following table indicates the removed methods and the replacement ones to
 adjust the code. Note that the new method signatures are different.
 
