--- a/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/documentation/devices/p2.md
+++ b/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/documentation/devices/p2.md
@@ -179,12 +179,12 @@ vlan internal order ascending range 1006 1199
 
 ##### ISIS
 
-| Interface | Channel Group | ISIS Instance | ISIS BFD | ISIS Metric | Mode | ISIS Circuit Type | Hello Padding | Authentication Mode |
-| --------- | ------------- | ------------- | -------- | ----------- | ---- | ----------------- | ------------- | ------------------- |
-| Ethernet1 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
-| Ethernet2 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
-| Ethernet3 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
-| Ethernet4 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
+| Interface | Channel Group | ISIS Instance | ISIS BFD | ISIS Metric | Mode | ISIS Circuit Type | Hello Padding | Level-1 Authentication Mode | Level-2 Authentication Mode |
+| --------- | ------------- | ------------- | -------- | ----------- | ---- | ----------------- | ------------- | --------------------------- | --------------------------- |
+| Ethernet1 | - | CORE | - | 50 | point-to-point | level-2 | True | - | - |
+| Ethernet2 | - | CORE | - | 50 | point-to-point | level-2 | True | - | - |
+| Ethernet3 | - | CORE | - | 50 | point-to-point | level-2 | True | - | - |
+| Ethernet4 | - | CORE | - | 50 | point-to-point | level-2 | True | - | - |
 
 #### Ethernet Interfaces Device Configuration
 
@@ -204,8 +204,6 @@ interface Ethernet1
    isis metric 50
    isis hello padding
    isis network point-to-point
-   isis authentication mode md5
-   isis authentication key 7 <removed>
 !
 interface Ethernet2
    description P2P_LINK_TO_pe1_Ethernet2
@@ -221,8 +219,6 @@ interface Ethernet2
    isis metric 50
    isis hello padding
    isis network point-to-point
-   isis authentication mode md5
-   isis authentication key 7 <removed>
 !
 interface Ethernet3
    description P2P_LINK_TO_rr2_Ethernet3
@@ -238,8 +234,6 @@ interface Ethernet3
    isis metric 50
    isis hello padding
    isis network point-to-point
-   isis authentication mode md5
-   isis authentication key 7 <removed>
 !
 interface Ethernet4
    description P2P_LINK_TO_p1_Ethernet4
@@ -255,8 +249,6 @@ interface Ethernet4
    isis metric 50
    isis hello padding
    isis network point-to-point
-   isis authentication mode md5
-   isis authentication key 7 <removed>
 ```
 
 ### Loopback Interfaces
