--- a/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/documentation/devices/p1.md
+++ b/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/documentation/devices/p1.md
@@ -179,12 +179,12 @@ vlan internal order ascending range 1006 1199
 
 ##### ISIS
 
-| Interface | Channel Group | ISIS Instance | ISIS BFD | ISIS Metric | Mode | ISIS Circuit Type | Hello Padding | Level-1 Authentication Mode | Level-2 Authentication Mode |
-| --------- | ------------- | ------------- | -------- | ----------- | ---- | ----------------- | ------------- | --------------------------- | --------------------------- |
-| Ethernet1 | - | CORE | - | 50 | point-to-point | level-2 | True | - | - |
-| Ethernet2 | - | CORE | - | 50 | point-to-point | level-2 | True | - | - |
-| Ethernet3 | - | CORE | - | 50 | point-to-point | level-2 | True | - | - |
-| Ethernet4 | - | CORE | - | 50 | point-to-point | level-2 | True | - | - |
+| Interface | Channel Group | ISIS Instance | ISIS BFD | ISIS Metric | Mode | ISIS Circuit Type | Hello Padding | Authentication Mode | Level-1 Authentication Mode | Level-2 Authentication Mode |
+| --------- | ------------- | ------------- | -------- | ----------- | ---- | ----------------- | ------------- | ------------------- | --------------------------- | --------------------------- |
+| Ethernet1 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |- | - |
+| Ethernet2 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |- | - |
+| Ethernet3 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |- | - |
+| Ethernet4 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |- | - |
 
 #### Ethernet Interfaces Device Configuration
 
@@ -204,6 +204,8 @@ interface Ethernet1
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 <removed>
 !
 interface Ethernet2
    description P2P_LINK_TO_pe2_Ethernet2
@@ -219,6 +221,8 @@ interface Ethernet2
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 <removed>
 !
 interface Ethernet3
    description P2P_LINK_TO_rr1_Ethernet3
@@ -234,6 +238,8 @@ interface Ethernet3
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 <removed>
 !
 interface Ethernet4
    description P2P_LINK_TO_p2_Ethernet4
@@ -249,6 +255,8 @@ interface Ethernet4
    isis metric 50
    isis hello padding
    isis network point-to-point
+   isis authentication mode md5
+   isis authentication key 7 <removed>
 ```
 
 ### Loopback Interfaces
