updated the porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -240,6 +240,36 @@ As of AVD 5.0.0 the automatic conversion from both of the previous models has be
               route_map: static-to-bgp
     ```
 
+### The old "null" option for esp integrity and encryption has been replaced with "disabled" from the ip_security module
+
+In AVD 4.0.0 we had "null" as a valid value for esp integrity and encryption to apply the null security profile and encryption under the ip-security configuration.
+
+As of AVD 5.0.0 "null" option for esp integrity and encryption has been replaced with "disabled" to apply the null security profile and encryption under the ip-security configuration.
+
+=== "Old data models"
+
+    ```yaml
+    # Old data model
+    ip_security:
+      sa_policies:
+        name: Disabled
+        esp:
+          integrity: "null"
+          encryption: "null"
+    ```
+
+=== "New data model"
+
+    ```yaml
+    # New data model
+    ip_security:
+      sa_policies:
+        name: Disabled
+        esp:
+          integrity: disabled
+          encryption: disabled
+    ```
+
 ### Removal of deprecated data models
 
 The following data model keys have been removed from `eos_cli_config_gen` in v5.0.0.
