--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -179,3 +179,41 @@ Instead use the `skip_tests` mechanism. See the [porting guide](../porting-guide
 #### Inband management reachability test change
 
 - Inband management reachability test has been refactored to support AVD inband management [data model](https://avd.sh/en/stable/roles/eos_designs/docs/input-variables.html#node-type-inband-management).
+
+### Deprecation of design.type
+
+The variable `design.type` is used to select between different variants of default values for `node_type_keys`.
+In AVD 5.0.0 the default values of `node_type_keys` for the default `design.type` `l3ls-evpn` has been updated to combine all the default node type from all designs.
+This means it is no longer needed to set the `design.type`.
+
+The default `node_type_keys` for the default design `l3ls-evpn` has been extended with the following node types:
+
+- `l2spine` copied from the `spine` type of the `l2ls` design.
+- `l3spine` copied from the `l2ls` design.
+- `rr`, `p` and `pe` copied from the `mpls` design.
+
+The `leaf` type used by the `l2ls` design is already covered by the `l2leaf` type in the `l3ls-evpn` design.
+
+To migrate an existing inventory using the `l2ls` design, the following changes are needed:
+
+```diff
+# Remove the design.type setting
+- design:
+-   type: l2ls
+
+# Replace the type 'spine' with 'l2spine'
+- type: spine
++ type: l2spine
+
+- spine:
++ l2spine:
+    ...
+
+# Replace type the 'leaf' with 'l2leaf'
+- type: leaf
++ type: l2leaf
+
+- leaf:
++ l2leaf:
+    ...
+```
