--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -70,9 +70,9 @@ As of AVD 5.0.0 the automatic conversion from both of the previous models has be
 
 See the [porting guide](../porting-guides/5.x.x.md#no-auto-conversion-of-old-data-model-for-router_bgpredistribute_routes-and-router_bgpvrfsredistribute_routes) for details.
 
-#### The old "null" option for esp integrity and encryption has been replaced with "disabled" from the ip_security module
+#### `ip_security.sa_policies[].esp.integrity` and `.encryption` "null" option has been replaced with "disabled"
 
-See the [porting guide](../porting-guides/5.x.x.md#the-old-null-option-for-esp-integrity-and-encryption-has-been-replaced-with-disabled-from-the-ip_security-module) for details.
+See the [porting guide](../porting-guides/5.x.x.md#ip_securitysa_policiesespintegrity-and-encryption-null-option-has-been-replaced-with-disabled) for details.
 
 #### Removal of schema in JSON format
 
