--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -240,6 +240,23 @@ As of AVD 5.0.0 the automatic conversion from both of the previous models has be
               route_map: static-to-bgp
     ```
 
+### `ip_security.sa_policies[].esp.integrity` and `.encryption` "null" option has been replaced with "disabled"
+
+In AVD 4.0.0 we had "null" as a valid value for esp integrity and encryption to apply the null security profile and encryption under the ip-security configuration.
+
+As of AVD 5.0.0 "null" option for esp integrity and encryption has been replaced with "disabled" to apply the null security profile and encryption under the ip-security configuration.
+
+```diff
+ ip_security:
+   sa_policies:
+     name: Disabled
+     esp:
+-      integrity: "null"
+-      encryption: "null"
++      integrity: disabled
++      encryption: disabled
+```
+
 ### Removal of deprecated data models
 
 The following data model keys have been removed from `eos_cli_config_gen` in v5.0.0.
