--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -70,6 +70,10 @@ As of AVD 5.0.0 the automatic conversion from both of the previous models has be
 
 See the [porting guide](../porting-guides/5.x.x.md#no-auto-conversion-of-old-data-model-for-router_bgpredistribute_routes-and-router_bgpvrfsredistribute_routes) for details.
 
+#### `ip_security.sa_policies[].esp.integrity` and `.encryption` "null" option has been replaced with "disabled"
+
+See the [porting guide](../porting-guides/5.x.x.md#ip_securitysa_policiesespintegrity-and-encryption-null-option-has-been-replaced-with-disabled) for details.
+
 #### Removal of schema in JSON format
 
 The `eos_cli_config_gen.jsonschema.json` is no longer generated. This schema was not being used and had never been complete.
