--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -285,6 +285,56 @@ As of AVD 5.0.0 "null" option for esp integrity and encryption has been replaced
 +      encryption: disabled
 ```
 
+### Added valid source protocol values for Router BGP redistribute route in `address_family_ipv4_multicast`, `address_family_ipv6`, and `vrf` configurations.
+
+In AVD 4.0.0 we had a list of str as source protocol for `address_family_ipv4_multicast`, `address_family_ipv6`, and `vrf` under router BGP.
+
+As of AVD 5.0.0 a list of str as source protocol for `address_family_ipv4_multicast`, `address_family_ipv6`, and `vrf` under router BGP updated with valid values.
+
+```diff
+ router_bgp:
+   address_family_ipv4_multicast:
+    redistribute_routes:
+      source_protocol:
+        type: str
++       valid_values:
++         - attached-host
++         - connected
++         - isis
++         - ospf
++         - ospfv3
++         - static
+  address_family_ipv6:
+    redistribute_routes:
+      source_protocol:
+        type: str
++       valid_values:
++         - attached-host
++         - bgp
++         - connected
++         - dhcp
++         - dynamic
++         - isis
++         - ospfv3
++         - static
++         - user
+  vrf:
+    redistribute_routes:
+      source_protocol:
+        type: str
+        valid_values:
++         - attached-host
++         - bgp
++         - connected
++         - dynamic
++         - isis
++         - ospf
++         - ospfv3
++         - rip
++         - static
++         - user
+```
+
 ### Removal of deprecated data models
 
 The following data model keys have been removed from `eos_cli_config_gen` in v5.0.0.
