Feat(eos_designs)!: Improve logic for BGP configuration of network services VRFs

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -200,6 +200,33 @@ no_autostate: false   # <-- Set on SVI, overriding the setting from svi_profile
 
 Depending on the complexity of the deployment, it may require changes to the SVI and profiles to retain the previous configuration output.
 
+#### BGP is now configured for Network services VRFs even if 'evpn' is not part of the address-families
+
+AVD versions below 5.0.0 did not generate BGP configuration for VRFs unless the node type included `evpn` or `mpls` under `default_address_families` *and* the
+VRF had the same `evpn` or `mpls` defined under `address_families` (default is `['evpn']`).
+
+AVD version 4.6.0 introduced the toggle `new_network_services_bgp_vrf_config: <bool; default=false>` to change this behavior by no longer requiring `evpn`
+in the address-families, but instead it always configured BGP for all VRFs. This toggle has been removed in AVD 5.0.0 since this is now part of the default
+behavior.
+
+With AVD version 5.0.0, the logic of whether to configure BGP for a network services VRF has been improved with the following rules:
+
+- **New**: Honor the new optional `bgp.enabled` setting, to either always or never configure BGP for the VRF.
+- **Existing**: If the VRF is part of an overlay (`evpn` or `mpls`), BGP will be configured for the VRF.
+- **New**: If any BGP peers are configured under the VRF, BGP will be configured for the VRF. This is useful for L2LS designs with VRFs.
+- **Improved**: If uplink type is `p2p-vrfs` *and* the VRF is included in the uplink VRFs, BGP will be configured for the VRF.
+
+It is possible to forcefully add or remove BGP configuration per VRF by setting:
+
+```yaml
+<network_services_key e.g. tenants>:
+  - name: mytenant
+    vrfs:
+      - name: myvrf
+        bgp:
+          enabled: <bool>  # <-- New optional setting to either always or never configure BGP for the VRF
+```
+
 ### custom_structured_configuration_prefix no longer accepts a string
 
 Starting AVD 5.0.0, `custom_structured_configuration_prefix` only accepts a list of strings.
