refactore the monitor connectivity template

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -285,6 +285,12 @@ As of AVD 5.0.0 "null" option for esp integrity and encryption has been replaced
 +      encryption: disabled
 ```
 
+### `monitor_connectivity.address_only`, `monitor_connectivity.hosts[].address_only`, `monitor_connectivity.vrfs[].address_only` and `monitor_connectivity.vrfs[].hosts[].address_only` default options has been replaced with defined
+
+In AVD 4.0.0  the `monitor_connectivity.address_only`, `monitor_connectivity.hosts[].address_only`, `monitor_connectivity.vrfs[].address_only` and `monitor_connectivity.vrfs[].hosts[].address_only` options are default as true so if not defined then it always renders the address-only configuration to set the default interface for probing.
+
+As of AVD 5.0.0 we have to define the `monitor_connectivity.address_only`, `monitor_connectivity.hosts[].address_only`, `monitor_connectivity.vrfs[].address_only` and `monitor_connectivity.vrfs[].hosts[].address_only` options to renders the address-only configuration to set the default interface for probing.
+
 ### Removal of deprecated data models
 
 The following data model keys have been removed from `eos_cli_config_gen` in v5.0.0.
