updated porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -287,7 +287,7 @@ As of AVD 5.0.0 "null" option for esp integrity and encryption has been replaced
 
 ### `address_only` options under `monitor_connectivity` no longer have a default value of `true`
 
-The default value `true` of data models `monitor_connectivity.hosts[].address_only`, `monitor_connectivity.vrfs[].address_only` and `monitor_connectivity.vrfs[].hosts[].address_only` has been removed, so it is now required to set `address_only: true` to render `address-only` in the EOS configuration.
+The default value `true` of data models `monitor_connectivity.address_only`, `monitor_connectivity.hosts[].address_only`, `monitor_connectivity.vrfs[].address_only` and `monitor_connectivity.vrfs[].hosts[].address_only` has been removed, so it is now required to set `address_only: true` to render `address-only` in the EOS configuration.
 ```diff
  monitor_connectivity:
    ...
