--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -280,7 +280,7 @@ As of AVD 5.0.0 the automatic conversion from both of the previous models has be
 
 ### Default EOS configuration is no longer automatically generated
 
-The `generate_default_config` setting controls generation of some default EOS configuration. This was previously set to `true` by default.
+The `generate_default_config` setting controls the generation of some default EOS configurations. This was previously set to `true` by default.
 
 As of AVD 5.0.0 the default value of `generate_default_config` has been changed to `false` to prevent generation of any configuration not specified by the
 inputs to `eos_cli_config_gen` (structured configuration).
