--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -287,7 +287,7 @@ As of AVD 5.0.0 "null" option for esp integrity and encryption has been replaced
 
 ### Removal of default type `switched` from ethernet interfaces and port-channel interfaces
 
-In AVD 4.0.0, we had "switched" as the default value for `ethernet_interfaces.type` and `port_channel_interfaces.type`.
+In AVD 4.0.0, we had "switched" as the default value for `ethernet_interfaces[].type` and `port_channel_interfaces[].type`.
 
 With AVD 5.0.0, the default value for `type` in `ethernet_interfaces` and `port_channel_interfaces` is no longer supported. The `type` key must now be explicitly defined in the input variables if it is needed in the configuration and documentation.
 
