--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -293,7 +293,7 @@ With AVD 5.0.0, the default value for `type` in `ethernet_interfaces` and `port_
 
 ### Added valid values for data models `router_bgp.address_family_ipv4_multicast.redistribute_routes[].source_protocol`, `router_bgp.address_family_ipv6.redistribute_routes[].source_protocol`, and `router_bgp.vrf.redistribute_routes[].source_protocol`
 
-Added valid for data models `router_bgp.address_family_ipv4_multicast.redistribute_routes[].source_protocol`, `router_bgp.address_family_ipv6.redistribute_routes[].source_protocol`, and `router_bgp.vrf.redistribute_routes[].source_protocol` to restrict the source protocol of redistribute routes in EOS configuration.
+Added valid values for data models `router_bgp.address_family_ipv4_multicast.redistribute_routes[].source_protocol`, `router_bgp.address_family_ipv6.redistribute_routes[].source_protocol`, and `router_bgp.vrf.redistribute_routes[].source_protocol` to restrict the source protocol of redistribute routes in EOS configuration.
 
 | Model | Valid Values |
 | ----- | ------------ |
