--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -17,6 +17,7 @@ title: Release Notes for AVD 5.x.x
 ### Changes to requirements
 
 - AVD v.5.0.0 requires Python version 3.10 or newer.
+- AVD no longer depends on the `jsonschema` Python library.
 
 ### Removal of Ansible plugins
 
