--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -18,6 +18,8 @@ title: Release Notes for AVD 5.x.x
 
 - AVD v.5.0.0 requires Python version 3.10 or newer.
 - AVD no longer depends on the `jsonschema` Python library.
+- AVD now requires `cvprac` python library to be version 1.4.0 or higher.<br>
+  The latest version can be installed with `pip install "cvprac>=1.4.0" --upgrade`.
 
 ### Removal of Ansible plugins
 
