--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -213,6 +213,11 @@ By default an MLAG ID will only be configured on Port-Channel downlinks dual-hom
 + mlag_on_orphan_port_channel_downlink: true
 ```
 
+### Duplicate value of `address` is allowed in `router_pim_sparse_mode.ipv4.rp_addresses`.
+
+In AVD 4.0.0, the value of `address` key was unique in `router_pim_sparse_mode.ipv4.rp_addresses`.
+In AVD 5.0.0, duplicate value of `address` is allowed in `router_pim_sparse_mode.ipv4.rp_addresses`.
+
 ## Changes to role `arista.avd.eos_cli_config_gen`
 
 TODO: Level 3 sections for each change with details on how to migrate
