--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -213,6 +213,11 @@ By default an MLAG ID will only be configured on Port-Channel downlinks dual-hom
 + mlag_on_orphan_port_channel_downlink: true
 ```
 
+### Default value of `isis_system_id_format` is changed to `underlay_loopback`
+
+In AVD 4.0.0, the default value of `isis_system_id_format` was `node_id`.
+In AVD 5.0.0, this default value is changed to `underlay_loopback`.
+
 ## Changes to role `arista.avd.eos_cli_config_gen`
 
 TODO: Level 3 sections for each change with details on how to migrate
