--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -215,7 +215,7 @@ By default an MLAG ID will only be configured on Port-Channel downlinks dual-hom
 
 ### Default value of `isis_system_id_format` is changed to `underlay_loopback`
 
-In AVD 4.0.0, the default value of `isis_system_id_format` was `node_id`.
+In AVD 4.0.0, `node_id` was the default value of `isis_system_id_format`.
 In AVD 5.0.0, this default value is changed to `underlay_loopback`.
 
 ## Changes to role `arista.avd.eos_cli_config_gen`
