--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -218,6 +218,10 @@ By default an MLAG ID will only be configured on Port-Channel downlinks dual-hom
 In AVD 4.0.0, `node_id` was the default value of `isis_system_id_format`.
 In AVD 5.0.0, this default value is changed to `underlay_loopback`.
 
+To retain the previous behavior set the value back to `node_id`:
+
+```diff
++isis_system_id_format: node_id
 ## Changes to role `arista.avd.eos_cli_config_gen`
 
 TODO: Level 3 sections for each change with details on how to migrate
