updated the unit test

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -102,14 +102,6 @@ adjust the code. Note that the new method signatures are different.
 
 For any method that was not previously overwritten, there should be no output change as compared to AVD 4.10.0.
 
-### `mlag_on_orphan_port_channel_downlink` option has no longer a default value of `true`
-
-The default value `true` of data model `mlag_on_orphan_port_channel_downlink` has been removed, so it is now required to set `mlag_on_orphan_port_channel_downlink: true` to configure the MLAG ID on a downlink Port-Channel even if the downlink is only on one node in the MLAG pair.
-
-```diff
-+ mlag_on_orphan_port_channel_downlink: true
-```
-
 ### Removal of deprecated data models
 
 The following data model keys have been removed from `eos_designs` in v5.0.0.
@@ -210,6 +202,15 @@ It can be added if required by using `config_comment`:
 
 ```diff
 +config_comment: "RANCID-CONTENT-TYPE: arista"
+```
+
+### `mlag_on_orphan_port_channel_downlink` option default value changed to false
+
+The default value `true` of data model `mlag_on_orphan_port_channel_downlink` has been changed to `false`, so it is now required to set `mlag_on_orphan_port_channel_downlink: true` to configure the MLAG ID on a downlink Port-Channel even if the downlink is only on one node in the MLAG pair.
+By default an MLAG ID will only be configured on Port-Channel downlinks dual-homed to two MLAG switches.
+
+```diff
++ mlag_on_orphan_port_channel_downlink: true
 ```
 
 ## Changes to role `arista.avd.eos_cli_config_gen`
