--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -204,7 +204,7 @@ It can be added if required by using `config_comment`:
 +config_comment: "RANCID-CONTENT-TYPE: arista"
 ```
 
-### `mlag_on_orphan_port_channel_downlink` option default value changed to false
+### Default value of `mlag_on_orphan_port_channel_downlink` is changed to `false`
 
 The default value `true` of data model `mlag_on_orphan_port_channel_downlink` has been changed to `false`, so it is now required to set `mlag_on_orphan_port_channel_downlink: true` to configure the MLAG ID on a downlink Port-Channel even if the downlink is only on one node in the MLAG pair.
 By default an MLAG ID will only be configured on Port-Channel downlinks dual-homed to two MLAG switches.
