Refactor(eos_designs)!: Change the default value of `mlag_on_orphan_port_channel_downlink` to `false` (#4371)

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -204,6 +204,15 @@ It can be added if required by using `config_comment`:
 +config_comment: "RANCID-CONTENT-TYPE: arista"
 ```
 
+### Default value of `mlag_on_orphan_port_channel_downlink` is changed to `false`
+
+The default value `true` of data model `mlag_on_orphan_port_channel_downlink` has been changed to `false`, so it is now required to set `mlag_on_orphan_port_channel_downlink: true` to configure the MLAG ID on a downlink Port-Channel even if the downlink is only on one node in the MLAG pair.
+By default an MLAG ID will only be configured on Port-Channel downlinks dual-homed to two MLAG switches.
+
+```diff
++ mlag_on_orphan_port_channel_downlink: true
+```
+
 ## Changes to role `arista.avd.eos_cli_config_gen`
 
 TODO: Level 3 sections for each change with details on how to migrate
