updated j2 and schema with isis levels

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -297,9 +297,9 @@ Added valid values for data models `router_bgp.address_family_ipv4_multicast.red
 
 | Model | Valid Values |
 | ----- | ------------ |
-| router_bgp.address_family_ipv4_multicast.redistribute_routes[].source_protocol | attached-host, connected, isis, ospf, ospfv3, static |
-| router_bgp.address_family_ipv6.redistribute_routes[].source_protocol | attached-host, bgp, connected, dhcp, dynamic, isis, ospfv3, static, user |
-| router_bgp.vrf.redistribute_routes[].source_protocol | attached-host, bgp, connected, dynamic, isis, ospf, ospfv3, rip, static, user |
+| router_bgp.address_family_ipv4_multicast.redistribute_routes[].source_protocol | attached-host, connected, isis, isis level-1, isis level-2, isis level-1-2, ospf, ospfv3, static |
+| router_bgp.address_family_ipv6.redistribute_routes[].source_protocol | attached-host, bgp, connected, dhcp, dynamic, isis, isis level-1, isis level-2, isis level-1-2, ospfv3, static, user |
+| router_bgp.vrf.redistribute_routes[].source_protocol | attached-host, bgp, connected, dynamic, isis, isis level-1, isis level-2, isis level-1-2, ospf, ospfv3, rip, static, user |
 
 ### Removal of deprecated data models
 
