updated title in porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -291,7 +291,7 @@ In AVD 4.0.0, we had "switched" as the default value for `ethernet_interfaces[].
 
 With AVD 5.0.0, the default value for `type` in `ethernet_interfaces` and `port_channel_interfaces` is no longer supported. The `type` key must now be explicitly defined in the input variables if it is needed in the configuration and documentation.
 
-### Added valid values for data models `router_bgp.address_family_ipv4_multicast.redistribute_routes[].source_protocol`, `router_bgp.address_family_ipv6.redistribute_routes[].source_protocol`, and `router_bgp.vrfs[].redistribute_routes[].source_protocol`
+### Added valid values for `redistribute_routes[].source_protocol` in `router_bgp` data model
 
 Added valid values for data models `router_bgp.address_family_ipv4_multicast.redistribute_routes[].source_protocol`, `router_bgp.address_family_ipv6.redistribute_routes[].source_protocol`, and `router_bgp.vrfs[].redistribute_routes[].source_protocol` to restrict the source protocol of redistribute routes in EOS configuration.
 
