Refactor(eos_designs)!: Change merge strategy for SVI structured_config from SVI profiles

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -99,6 +99,14 @@ for details.
 
 TODO: add level4 sections for breaking changes outlining the change and referring to porting guide for migration.
 
+#### Structured Configuration merged from SVI profiles is now deep merged instead of replaced
+
+When merging `structured_config` from SVI profiles and parent profiles, AVD versions below 5.0.0 replaced the entire `structured_config` object with the most specific definition of `structured_config`.
+
+With AVD version 5.0.0 `structured_config` is now deep-merged, same as for other profiles in AVD. This allows the user to contribute different parts of the `structured_config` from profiles or parent profiles.
+
+See the [porting guide](../porting-guides/5.x.x.md#) for details.
+
 #### custom_structured_configuration_prefix no longer accepts a string
 
 Starting AVD 5.0.0, `custom_structured_configuration_prefix` only accepts a list of strings.
