add mlag details to porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -200,6 +200,17 @@ no_autostate: false   # <-- Set on SVI, overriding the setting from svi_profile
 
 Depending on the complexity of the deployment, it may require changes to the SVI and profiles to retain the previous configuration output.
 
+#### MLAG L3 Peering VLAN 4093 is no longer created when `underlay_routing_protocol: 'none'`
+
+AVD versions below 5.0.0 created the MLAG L3 peering VLAN 4093, even when no L3 MLAG peering was created using an underlay routing protocol.
+This happened in cases where `underlay_routing_protocol` was set to `none`.
+
+In AVD version 5.0.0 the MLAG L3 peering VLAN 4093 is not longer created when `underlay_routing_protocol` is `'none'`.
+Instead an MLAG peering VLAN will be created for VRF `default`, if it is defined under network services, using the same MLAG peer VLAN logic as for
+other VRFs; `<mlag_ibgp_peering_vrfs.base_vlan - default 3000> - 1 + <vrf_id>`.
+
+The peer VLAN config can be retained by using `custom_structured_configuration` or by setting `underlay_routing_protocol` to something else than `none`.
+
 #### BGP is now configured for Network services VRFs even if 'evpn' is not part of the address-families
 
 AVD versions below 5.0.0 did not generate BGP configuration for VRFs unless the node type included `evpn` or `mpls` under `default_address_families` *and* the
