minor update to porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -209,7 +209,7 @@ In AVD version 5.0.0 the MLAG L3 peering VLAN 4093 is not longer created when `u
 Instead an MLAG peering VLAN will be created for VRF `default`, if it is defined under network services, using the same MLAG peer VLAN logic as for
 other VRFs; `<mlag_ibgp_peering_vrfs.base_vlan - default 3000> - 1 + <vrf_id>`.
 
-The peer VLAN config can be retained by using `custom_structured_configuration` or by setting `underlay_routing_protocol` to something else than `none`.
+The peer VLAN config can be retained by setting `mlag_ibgp_peering_vlan: 4093` under the VRF, by using `custom_structured_configuration` or by setting `underlay_routing_protocol` to something else than `none`.
 
 #### BGP is now configured for Network services VRFs even if 'evpn' is not part of the address-families
 
