Refactor: Address PR comments

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -147,6 +147,11 @@ The updated version gives more flexibility to customizing interface descriptions
 
 See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#avdinterfacedescriptions-breaking-changes)
 
+#### Use Control Plane IPsec profile when Data Plane profile is not configured
+
+For `wan_ipsec_profiles`, AVD now uses the `control_plane` profile for Data
+Plane when the `data_plane` profile is not configured.
+
 ### Other breaking or behavioral changes
 
 Breaking changes may require modifications to the inventory or playbook. See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md)
