Cut(eos_cli_config_gen): Deprecated  data model

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -434,6 +434,7 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | vlan_interfaces[].ipv6_address_virtual | vlan_interfaces[].ipv6_address_virtuals |
 | vlan_interfaces[].ipv6_virtual_router_address | vlan_interfaces[].ipv6_virtual_router_addresses |
 | vlan_interfaces[].vrrp | vlan_interfaces[].vrrp_ids |
+| community_lists | ip_community_lists |
 
 ## Changes to role `arista.avd.eos_validate_state`
 
