--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -409,6 +409,19 @@ The following `eos_cli_config_gen` inputs can be given as needed to generate the
 All changes except `"RANCID-CONTENT-TYPE: arista"` have been incorporated into `eos_designs`. Action is only required when using `eos_cli_config_gen` directly,
 or if the `RANCID-CONTENT-TYPE: arista` is required.
 
+### `router_isis.address_family_ipv4/6.enabled` is now `Required` to generate the configuration and documentation for router_isis address-families
+
+In AVD 4.0.0, the router-isis address-family configuration and documentation were generated independently of the `router_isis.address_family_ipv4/6.enabled` key.
+
+As of AVD 5.0.0, `router_isis.address_family_ipv4/6.enabled` must be set to generate the configuration and documentation for router_isis address-families.
+
+```diff
+  router_isis:
+    address_family_ipv6:
+-      enabled: <bool>
++      enabled: <bool; required>
+```
+
 ### `ip_security.sa_policies[].esp.integrity` and `.encryption` "null" option has been replaced with "disabled"
 
 In AVD 4.0.0 we had "null" as a valid value for esp integrity and encryption to apply the null security profile and encryption under the ip-security configuration.
