--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -80,6 +80,10 @@ As of AVD 5.0.0 the automatic conversion from both of the previous models has be
 
 See the [porting guide](../porting-guides/5.x.x.md#no-auto-conversion-of-old-data-model-for-router_bgpredistribute_routes-and-router_bgpvrfsredistribute_routes) for details.
 
+### `router_isis.address_family_ipv4/6.enabled` is now `Required` to generate the configuration and documentation for router_isis address-families
+
+See the [porting guide](../porting-guides/5.x.x.md#router_isisaddress_family_ipv46enabled-is-now-required-to-generate-the-configuration-and-documentation-for-router_isis-address-families) for details.
+
 #### `ip_security.sa_policies[].esp.integrity` and `.encryption` "null" option has been replaced with "disabled"
 
 See the [porting guide](../porting-guides/5.x.x.md#ip_securitysa_policiesespintegrity-and-encryption-null-option-has-been-replaced-with-disabled) for details.
