updated the porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -260,6 +260,12 @@ By default an MLAG ID will only be configured on Port-Channel downlinks dual-hom
 + mlag_on_orphan_port_channel_downlink: true
 ```
 
+### Raise the AVD error if `sFlow` is enabled on an interface but `sflow_settings.destinations` is not defined
+
+In AVD 4.0.0, if `sFlow` was enabled on an interface but `sflow_settings.destinations` was not defined, the sFlow configuration was not generated.
+
+As of AVD 5.0.0, if `sFlow` is enabled on an interface but `sflow_settings.destinations` is not defined, the sFlow configuration is not generated, and an AVD error is raised.
+
 ### Default value of `isis_system_id_format` is changed to `underlay_loopback`
 
 In AVD 4.0.0, `node_id` was the default value of `isis_system_id_format`.
