Updating porting-guides and release-notes for AVD 5.x.x

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -508,6 +508,34 @@ In AVD 4.0.0, we had "switched" as the default value for `ethernet_interfaces[].
 
 With AVD 5.0.0, the default value for `type` in `ethernet_interfaces` and `port_channel_interfaces` is no longer supported. The `type` key must now be explicitly defined in the input variables if it is needed in the configuration and documentation.
 
+### Removal of `type` key dependency for rendering ethernet/port-channel interfaces configuration and documentation
+
+#### IPv4 and IPv6 tables
+
+In AVD 4.0.0, the tables for `IPv4` and `IPv6` in ethernet and pory-channel interfaces were rendered only if `ethernet_interfaces[].type` or `port_channel_interfaces[].type` was set to `routed/l3dot1q`.
+
+With AVD 5.0.0, the dependency on the 'type' key for rendering tables for IPv4 and IPv6 in ethernet and port-channel interfaces has been removed.
+
+#### `vlan_id` configuration
+
+In AVD 4.0.0, the configuration for `vlan_id` in ethernet interfaces and port-channel interfaces was rendered only if `ethernet_interfaces[].type` or `port_channel_interfaces[].type` was set to `l2dot1q`.
+
+With AVD 5.0.0, the dependency on the 'type' key for rendering configuration of `vlan_id` in ethernet and port-channel interfaces has been removed.
+
+#### `switchport` configuration and documentation
+
+In AVD 4.0.0, the configuration and documentation for `switchport` in ethernet and port-channel interfaces were renderend only if `ethernet_interfaces[].type` or `port_channel_interfaces[].type` was set to `switched` along with the keys `mode`, `vlans`, `native_vlan`, `native_vlan_tag`, `trunk_groups`, `phone`, `vlan_translations`, `trunk_private_vlan_secondary`, `pvlan_mapping`. The `no switchport` was renderend if `ethernet_interfaces[].type` or `port_channel_interfaces[].type` was set to `routed`.
+
+With AVD 5.0.0, a new key for `switchport` has been introduced under ethernet and port-channel interfaces data-model, which generates the configuration and documentation for `switchport` independent of the `type` key.
+The keys `mode`, `vlans`, `native_vlan`, `native_vlan_tag`, `trunk_groups`, `phone`, `vlan_translations`, `trunk_private_vlan_secondary`, `pvlan_mapping` are deprecated, to be removed in AVD 6.0.0.
+
+#### `encapsulation` configuration and documentation
+
+In AVD 4.0.0, the configuration and documentation for `encapsulation` in ethernet and port-channel interfaces were renderend only if `ethernet_interfaces[].type` or `port_channel_interfaces[].type` was set to `l2dot1q/l3dot1q` along with the keys `encapsulation_dot1q_vlan` and `encapsulation_vlan`.
+
+With AVD 5.0.0, a new key for `encapsulation_dot1q` has been introduced and the schema for `encapsulation_vlan` has been modified under ethernet and port-channel interfaces data-model, which generates the configuration and documentation for `encapsulation` independent of the `type` key.
+The keys `encapsulation_dot1q_vlan`, `encapsulation_vlan.client.dot1q`, `encapsulation_vlan.client.unmatched`, `encapsulation_vlan.network.dot1q` and `encapsulation_vlan.network.client` are deprecated, to be removed in AVD 6.0.0.
+
 ### Removal of deprecated data models
 
 The following data model keys have been removed from `eos_cli_config_gen` in v5.0.0.
