Apply suggestions from code review
Co-authored-by: laxmikantchintakindi <159624484+laxmikantchintakindi@users.noreply.github.com>

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -512,7 +512,7 @@ With AVD 5.0.0, the default value for `type` in `ethernet_interfaces` and `port_
 
 #### IPv4 and IPv6 tables
 
-In AVD 4.0.0, the tables for `IPv4` and `IPv6` in ethernet and pory-channel interfaces were rendered only if `ethernet_interfaces[].type` or `port_channel_interfaces[].type` was set to `routed/l3dot1q`.
+In AVD 4.0.0, the tables for `IPv4` and `IPv6` in ethernet and port-channel interfaces were rendered only if `ethernet_interfaces[].type` or `port_channel_interfaces[].type` was set to `routed/l3dot1q`.
 
 With AVD 5.0.0, the dependency on the 'type' key for rendering tables for IPv4 and IPv6 in ethernet and port-channel interfaces has been removed.
 
@@ -520,7 +520,7 @@ With AVD 5.0.0, the dependency on the 'type' key for rendering tables for IPv4 a
 
 In AVD 4.0.0, the configuration for `vlan_id` in ethernet interfaces and port-channel interfaces was rendered only if `ethernet_interfaces[].type` or `port_channel_interfaces[].type` was set to `l2dot1q`.
 
-With AVD 5.0.0, the dependency on the 'type' key for rendering configuration of `vlan_id` in ethernet and port-channel interfaces has been removed.
+With AVD 5.0.0, the dependency on the 'type' key for rendering the configuration of `vlan_id` in ethernet and port-channel interfaces has been removed.
 
 #### `switchport` configuration and documentation
 
