Feat(eos_designs)!: Update the default platform settings for R3-series to have TCAM profile "vxlan-routing" (#4387)

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -124,6 +124,35 @@ The following data model keys have been removed from `eos_designs` in v5.0.0.
 | svi_profiles[].ipv6_address_virtual | svi_profiles[].ipv6_address_virtuals |
 | ptp | ptp_settings |
 
+### The default platform settings for R3-series now have the TCAM profile "vxlan-routing"
+
+Starting AVD 5.0.0, the default platform settings for `7280R3`, `7500R3` and `7800R3` platforms now contain `tcam_profile: vxlan-routing`
+This change is based on a new Arista best practice for VXLAN deployments with the R3-series.
+Not using this TCAM profile can lead to incorrect handling of VXLAN IPv6 NS packets.
+
+!!! warning
+    Since applying a TCAM profile will cause reprogramming of the forwarding processor, it can lead to disturbances to the network services.
+
+    Please work with your Arista account team to decide if the new default is the right choice for your network, and how to apply it.
+
+To retain the old configuration with no TCAM profile the default platform settings can be overridden with the new `custom_platform_settings` key:
+
+```diff
++custom_platform_settings:
++  - platforms:
++      - 7280R3
++    reload_delay:
++      mlag: 900
++      non_mlag: 1020
++  - platforms:
++      - 7500R3
++      - 7800R3
++    management_interface: Management0
++    reload_delay:
++      mlag: 900
++      non_mlag: 1020
+```
+
 #### Structured Configuration merged from SVI profiles is now deep merged instead of replaced
 
 When merging `structured_config` from SVI profiles and parent profiles, AVD versions below 5.0.0 replaced the entire `structured_config` object with the most specific definition of `structured_config`.
