--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -12,6 +12,26 @@ title: Release Notes for AVD 4.x.x
 
 - Documentation for AVD version `4.x.x` [available here](https://avd.arista.com/stable/)
 
+## Release 4.10.1
+
+### Fixed issues in eos_cli_config_gen
+
+- Fix(eos_cli_config_gen): Use the correct VRF name for ip nat profile (#4398) by @gmuloc in https://github.com/aristanetworks/avd/pull/4405
+
+### Fixed issues in eos_designs
+
+- Fix(eos_designs): Better error message when missing 'evpn_multicast' for PIM l3 interfaces (#4391) by @gmuloc in https://github.com/aristanetworks/avd/pull/4413
+
+### Other Fixed issues
+
+- Fix(cv_deploy): Ensure 'AVD Configurations' container is inserted first (#4356) by @gmuloc in https://github.com/aristanetworks/avd/pull/4409
+- Fix(eos_validate_state): Ensure graceful handling of command errors from ANTA (#4385) by @gmuloc in https://github.com/aristanetworks/avd/pull/4406
+- Fix(cv_deploy): Fix Ansible Logging and increase API timeouts (#4357) by @gmuloc in https://github.com/aristanetworks/avd/pull/4408
+
+### Other Changes
+
+- Refactor(eos_designs): Optimize handling of WAN internet exits (#4372) by @gmuloc in https://github.com/aristanetworks/avd/pull/4407
+
 ## Release 4.10.0
 
 ### Deprecations
