Updating the diff in porting-guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -417,12 +417,12 @@ As of AVD 5.0.0, `router_isis.address_family_ipv4/6.enabled` must be set to gene
 
 ```diff
   router_isis:
-    address_family_ipv6:
--      enabled: <bool>
-+      enabled: <bool; required>
     address_family_ipv4:
--       enabled: <bool>
-+       enabled: <bool; required>
++     enabled: true
+      <...>
+    address_family_ipv6:
++     enabled: true
+      <...>
 ```
 
 ### `ip_security.sa_policies[].esp.integrity` and `.encryption` "null" option has been replaced with "disabled"
